--- a/home slider file/slider.css
+++ b/home slider file/slider.css
@@ -391,14 +391,14 @@ html .wrap:after {
     background-color: #ff5652;
     opacity: 0.75;
 }
-.panel--green .panel__content .btn {
+.panel--green .panel__content .btn, .panel--cohkolate  .panel__content .btn{
     color: #cf223c;
     background: #fff;
     padding: 10px 25px;
     text-transform: uppercase;
     font-size: 15px;
 }
-.panel--green:hover .btn {
+.panel--green:hover .btn, .panel--cohkolate:hover .btn {
     background-color: #fff;
 }
 .panel--green:hover .btn:hover {
