--- a/singlebrand.css
+++ b/singlebrand.css
@@ -135,7 +135,8 @@
 }
 
 }
-@media screen and (max-width: 375px), (max-device-width: 375px){
+
+@media screen and (max-width: 414px), (max-device-width: 414px){
 	.singlebrand_ourstory {
     width: 100%;
 	}
@@ -201,9 +202,74 @@
 		top:-85px!important;
 	}
 	
-	
-	
+	    
+}
 
+@media screen and (max-width: 375px), (max-device-width: 375px){
+	.singlebrand_ourstory {
+    width: 100%;
+	}
+	.left_brandsingle_image figure{
+		width: 100%;
+    margin-top: -60px!important;
+    max-width: 88%;
+	}
+
+	.slider3s .owl-stage-outer {
+		left:-15%!important;
+	}
+	
+	.slider3s .owl-stage{
+		padding-left:0px!important;
+	}
+	.slider3s .active{
+		width:300px!important;
+	}
+	
+	.slider3s .owl-stage-outer .owl-stage-outer img{
+		height: 200px!important;
+    width: 262px!important;
+    max-width: 245px!important;
+	}
+	
+	.concept_singlebrand .kt-inside-inner-col {
+     width: 100%!important;
+ }
+	
+	.single_brand_bg_section .kt-inside-inner-col {
+    background-size: contain!important;
+    height: 140px!important;
+}
+	.single_brand_bg_section .kt-inside-inner-col {
+    width: 100%;
+}
+	.spbg_singlebrand .kt-inside-inner-col {
+    width: 100%!important;
+}
+	.text_extra_singlebrand .kt-inside-inner-col {
+    width: 90%;
+}
+	.sp_text_area {
+    width: 90%;
+}
+	.quick_innerrow .kt-row-column-wrap{
+		max-width:90%!important;
+	}
+	
+	.inner_column_single {
+    height: 150px!important;
+}
+	
+	.inner_column_single .kt-inside-inner-col{
+		padding-top:20px!important;
+	}
+	
+	.inner_single_right a {
+    padding: 30px 130px!important;
+}
+	.ndres{
+		top:-85px!important;
+	}
 	
 	    
 }
